--- a/jeremy-vue/src/css/element/my_edit.css
+++ b/jeremy-vue/src/css/element/my_edit.css
@@ -19,6 +19,7 @@
     padding-bottom: 0px;
     margin-top: 0px;
     margin-bottom: 0px;
+    margin-right: 20px;
 }
 .rightFloat{
     float:right;
